kubernetes/applications/ceph-storage/manifests/authentik/authentik-namespace.yml
# =====================================
# 0. Namespace for Authentik
# =====================================
---
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
