kubernetes/applications/ceph-storage/manifests/authentik/authentik-postgres-statefulset.yml

# =====================================
# 2. Authentik DB StatefulSet (PostgreSQL)
# =====================================
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authentik-postgres-db
  namespace: authentik
  labels:
    app: authentik-postgres-db
spec:
  serviceName: authentik-postgres-db
  replicas: 1
  selector:
    matchLabels:
      app: authentik-postgres-db
  template:
    metadata:
      labels:
        app: authentik-postgres-db
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      containers:
        - name: postgres
          image: postgres:18.4
          imagePullPolicy: IfNotPresent
          args:
            - -c
            - max_connections=500
          ports:
            - name: postgres
              containerPort: 5432
          readinessProbe:
            exec:
              command: ["sh","-c","pg_isready -d authentik -U authentik"]
            initialDelaySeconds: 20
            periodSeconds: 30
          livenessProbe:
            exec:
              command: ["sh","-c","pg_isready -d authentik -U authentik"]
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: example-rbd-rbd
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
