kubernetes/applications/ceph-storage/manifests/authentik/authentik-redis-statefulset.yml

# =====================================
# 4. Authentik Redis StatefulSet
# =====================================
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authentik-redis-app
  namespace: authentik
  labels:
    app: authentik-redis-app
spec:
  serviceName: authentik-redis-app
  replicas: 1
  selector:
    matchLabels:
      app: authentik-redis-app
  template:
    metadata:
      labels:
        app: authentik-redis-app
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      containers:
        - name: redis
          image: redis:8.10.2-alpine
          imagePullPolicy: IfNotPresent
          command: ["redis-server","--save","60","1","--appendonly","no"]
          ports:
            - name: redis
              containerPort: 6379
          readinessProbe:
            exec:
              command: ["redis-cli","ping"]
            initialDelaySeconds: 20
            periodSeconds: 30
          livenessProbe:
            exec:
              command: ["redis-cli","ping"]
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: example-rbd-rbd
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
