kubernetes/applications/ceph-storage/manifests/authentik/authentik-redis-service.yml

# =====================================
# 5. Service for Authentik Redis
# =====================================
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-redis-app
  namespace: authentik
spec:
  selector:
    app: authentik-redis-app
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
