kubernetes/applications/ceph-storage/manifests/authentik/authentik-ldaps-ingressroutetcp.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: authentik-ldaps
  namespace: authentik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - ldaps
  routes:
    - match: "HostSNI(`*`)"
      services:
        - name: ak-ldap-outpost
          port: 636
  tls:
    passthrough: true
